5.1.4

2021-08-01  Sam Varshavchik  <mrsam@courier-mta.com>

	* imapd.c (bye): Just call exit(), we may be in an inconstent state.

2021-06-15  Sam Varshavchik  <mrsam@courier-mta.com>

	* pop3login: use unbuffered reads, handle our own buffering.

2021-05-21  Sam Varshavchik  <mrsam@courier-mta.com>

	* Minor code tweaks, make it compleable with -Wall -Werror.

5.1.3

2021-04-01  Sam Varshavchik  <mrsam@courier-mta.com>

	* pop3d: pro-forma POP3 LANG extension.

2021-03-28  Sam Varshavchik  <mrsam@courier-mta.com>

	* pop3d-ssl.dist.in (TLS_STARTTLS_PROTOCOL): Remove duplicate entry
	in the pop3d-ssl configuration file.

5.1.2

2021-03-25  Sam Varshavchik  <mrsam@courier-mta.com>

	* make*: Individual files that did not end in a newline were
	not handled correctly.

	* imap: adjust error message.

5.1.1

2021-03-20  Arjen de Korte <build+github@de-korte.org>

	* Fix TLS_CACHEfile naming mismatch.

5.1.0

2021-02-23  Sam Varshavchik  <mrsam@courier-mta.com>

	* Implement support for the TLS ALPN extension.

2021-02-18  Sam Varshavchik  <mrsam@courier-mta.com>

	* Replace FAM/Gamin with inotify.

	* Install the maildirwatch tool.

	* Remove the IMAP_ENHANCEDIDLE setting from the imapd configuration
	file.

	* Update RPM spec file.

5.0.13

2021-03-01  Sam Varshavchik  <mrsam@courier-mta.com>

	* Fix handling of bad DNS queries

5.0.12

2020-12-06  Sam Varshavchik  <mrsam@courier-mta.com>

	* openssl: Add TLS_PROTOCOL setting to disable client-initiated
	renegotiation.

2020-11-30  Sam Varshavchik  <mrsam@courier-mta.com>

	* imap: send corrupted Unicode alerts only for new messages.

2020-11-04  Sam Varshavchik  <mrsam@courier-mta.com>

	* spec file: add BuildRequires: %{__make} (will be required in F34).

2020-10-27  Sam Varshavchik  <mrsam@courier-mta.com>

	* waitlib: fix testwait.c failure with LTO enabled on F33.

	* pop3login.c: fflush before STARTLS.

5.0.11

2020-05-18  Sam Varshavchik  <mrsam@courier-mta.com>

	* courier-authlib API update.
